--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "zod": "^4.1.12"
   },
   "devDependencies": {
+    "@netlify/vite-plugin-tanstack-start": "^1.1.6",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.2.0",
     "@types/node": "^22.10.2",
